--- a/index1.html
+++ b/index1.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <header class="navbar">
+        <div class="logo">Youtube</div>
+        
+        <form class="search"> 
+            <input type="textbox">
+            <button type="submit">Find</button>
+        </form>
+
+        <nav class="icon">
+            <ul>
+                <li><i class="fas fa-bell"></i></li>
+                <li><i class="fas fa-play"></i></li> 
+                <li><i class="fas fa-user-circle"></i></li>
+            </ul>
+        </nav>
+    </header>
+
+    <ul class="menu">
+        <li>All</li>
+        <li>All</li>
+        <li>All</li>
+        <li>All</li>
+        <li>All</li>
+    </ul>
+
+
     <h1>this is a page</h1>
+
 </body>
 </html>
